css/style.css
/* ... */
.menu-mobile-reserver {
  font-weight: 600;
}

/* Masquer le menu mobile */
@media only screen and (min-width: 992px) {
  .menu-container-mobile,
  #menu-mobile-contenu {
    display: none;
  }
}

/* Header */

header {
  background-repeat: no-repeat;
  background-size: cover;
}

/* Bouton de réservation */
.reservation-area-content {
  font-size: 2rem;
  font-family: "Reem Kufi", sans-serif;
  border: solid 1px white;
  background-color: black;
  max-width: 25rem;
  border-radius: 1rem;
  color: white;
  bottom: 0;
  transition-property: box-shadow, bottom;
  transition-duration: 0.5s;
  padding-left: 0;
  padding-right: 0;
}

.reservation-area-content p {
  text-align: center;
  margin-bottom: 0;
  padding-bottom: 0 !important;
}

.reservation-area-content:hover {
  box-shadow: 0 0.5rem 0.5rem var(--red);
  bottom: 0.3rem;
}

/* Footer */

.degrade-haut-footer {
  width: 100%;
  height: 15rem;
  background: linear-gradient(to top, black 20%, transparent);
  position: relative;
  bottom: -1rem;
  z-index: -1;
}

footer {
  background-color: black;
  padding-bottom: 2rem;
}

.degrade-haut-footer h2 {
  color: var(--light-white);
  text-align: center;
}

footer p, footer h3 {
  color: var(--pale-gray);
  text-align: center;
}

footer li a,
footer div {
  color: var(--light-white);
  font-size: 1.6rem;
}

footer li a {
  font-size: 2.4rem;
}

.footer-social-networks {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  font-size: 3rem;
}

footer hr {
  background-color: var(--light-white);
  margin-top: 4rem;
}

#avertissement {
  color: var(--light-white);
}

.portfolio {
  color: white;
  font-weight: bold;
}

.portfolio a {
  text-decoration: underline;
}

/*** CSS des différentes pages ***/

/** Index **/
.header-index {
  position: relative;
  z-index: -1;
}

.blocVideo{
  background-color: black;
}

.blocVideo video {
  position: relative;
  top: 5rem;
  width: 100%;
  margin-bottom: 5rem;
}

@media only screen and (max-width: 991px) {
  .blocVideo {
    display: none;
  }
}

.degrade-bas-video-accueil {
  width: 100%;
  height: 15rem;
  background: linear-gradient(to top, rgb(255, 250, 221) 20%, rgb(255, 250, 221) 40%, transparent);
  position: relative;
  bottom: 10rem;
  z-index: 0;
}

@media only screen and (max-width: 991px) {   
    .menu-container-mobile i{
        padding: .5rem;
        background-color: var(--light-gray);
    }

    /* Baisser le h1 en mobile */
    h1 {
        margin-top: 7rem;
        background: white;
        color: black;
    }

    .h2-principal{
      display: none;
    }

    .degrade-bas-video-accueil{
      /* display: none; */
      z-index: -2;
    }

  }

/* Carrousel */

.carousel {
  margin-bottom: 4rem;
}

.carousel-indicators {
  z-index: 1;
}

/** Chambres **/
.blocVideo img {
  position: relative;
  top: 5rem;
  width: 100%;
}

.fiche-service {
  background-color: var(--very-pale-gray);
  border: solid var(--deep-gray) 1px;
  padding: 0;
  margin-bottom: 4rem;
}

.fiche-service p {
  font-size: 1.4rem;
  margin-top: 2rem;
}

.fiche-service div {
  max-width: 100%;
  text-align: center;
}

.fiche-service img {
  margin-top: 1rem;
  max-width: 100%;
}

.galerie {
  border: solid var(--light-white) 2px;
  padding: 0;
  /* box-shadow: .3rem .3rem .3rem gray; */
  margin: 2rem 0 2rem 0;
  text-align: center;
  padding: 1.5rem 0.2rem 1.5rem 0.2rem;
}

.galerie img {
  transition: 0.5s;
  padding: 10px;
  filter: grayscale(70%);
}

.galerie img:hover {
  filter: initial;
  transform: scale(1.1);
}

/* Restaurant */

.restau-horaires {
  font-size: 1.2rem;
  font-style: italic;
}

.carte-restau {
  border: thick double white;
}

.hr-carte-restau {
  background-color: white;
  height: 1px;
  margin: 3rem 5rem 5rem 5rem;
}

.carte-restau p {
  text-align: left;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.carte-restau-prix {
  font-size: 1.1rem !important;
  font-style: italic;
  color: var(--deep-gray);
}

.carte-description {
  background-color: var(--light-gray);
  margin: 2rem;
}
.carte-restau-ornement {
  margin-bottom: 5rem;
}

.carte-restau h4 {
  color: white;
  text-shadow: 0 0 2.8rem black;
  margin-bottom: 2rem;
  margin-top: 4rem;
}

.galerie-restau {
  border: none;
}

/* Spa */
.spa-fiche-generale {
  background: linear-gradient(to right, var(--pale-gray), var(--light-white));
  border-radius: 1rem;
  box-shadow: 0.3rem 0.3rem 0.5rem gray;
  margin-bottom: 4rem;
}

.spa-fiche-image {
  text-align: center;
}

.spa-fiche-toggle-paragraph {
  text-align: center;
  color: var(--deep-gray);
  font-weight: bold;
}

.spa-fiche-toggle1,
.spa-fiche-toggle2,
.spa-fiche-toggle3,
.spa-fiche-toggle4,
.spa-fiche-toggle5,
.restau-fiche-toggle1,
.restau-fiche-toggle2,
.restau-fiche-toggle3 {
  cursor: pointer;
}

.spa-fiche-toggle1:hover,
.spa-fiche-toggle2:hover,
.spa-fiche-toggle3:hover,
.spa-fiche-toggle4:hover,
.spa-fiche-toggle5:hover,
.restau-fiche-toggle1:hover, 
.restau-fiche-toggle2:hover,
.restau-fiche-toggle3:hover {
  color: var(--red);
}

.spa-fiche-contenu1,
.spa-fiche-contenu2,
.spa-fiche-contenu3,
.spa-fiche-contenu4,
.spa-fiche-contenu5,
.restau-fiche-contenu1,
.restau-fiche-contenu2,
.restau-fiche-contenu3 {
  display: none;
}

.spa-fiche-contenu1 .col-11,
.spa-fiche-contenu2 .col-11,
.spa-fiche-contenu3 .col-11,
.spa-fiche-contenu4 .col-11,
.spa-fiche-contenu5 .col-11 {
  text-align: justify;
}

.spa-fiche-generale li {
  font-family: Georgia, "Times New Roman", Times, serif;
  font-size: 1.6rem;
}

/* Réservations */
.resa-background {
  background: linear-gradient(to right, var(--pale-gray), var(--light-white));
  border-radius: 1rem;
  box-shadow: 0.3rem 0.3rem 0.5rem gray;
}

.resa-zone {
  padding: 4rem;
}

.resa-zone p {
  margin-bottom: 2rem;
  margin-top: 0;
}

.bad-mail-confirmation {
  background-color: rgba(212, 51, 51, 0.068);
  border: rgba(212, 51, 51, 0.548) solid 2px;
}

#from,
#to {
  width: 9rem;
}

/* Avis */

#tabs {
  border-radius: 1rem;
}

/* #tabs li{

} */
/* ... */

